--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -4,7 +4,7 @@
     "dockerComposeFile": [
         "../docker-compose.yml"
     ],
-    "service": "app",
+    "service": "laravel.test",
     "workspaceFolder": "/workspaces/sail-codespaces",
     "settings": {},
     "extensions": [
