--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -5,7 +5,7 @@
         "../docker-compose.yml"
     ],
     "service": "laravel.test",
-    "workspaceFolder": "/workspaces/sail-codespaces",
+    "workspaceFolder": "/var/www/html",
     "settings": {},
     "extensions": [
         // "mikestead.dotenv",
@@ -15,9 +15,10 @@
         // "onecentlin.laravel-blade"
     ],
     "remoteUser": "sail",
-    "initializeCommand": "cp .env.example .env",
-    // "postCreateCommand": "chown -R 1000:1000 /workspaces/sail-codespaces"
-    "postCreateCommand": "composer install && php artisan key:generate && php artisan migrate"
+    "initializeCommand": "cp .env.example .env && sed -i \"APP_URL=|APP_URL=https://${CODESPACE_NAME}-80.${GITHUB_CODESPACES_PORT_FORWARDING_DOMAIN}|g\"",
+    "postCreateCommand": {
+        "setup": "composer install && php artisan key:generate && php artisan migrate"
+    }
     // "forwardPorts": [],
     // "runServices": [],
     // "shutdownAction": "none",
