--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -15,10 +15,8 @@
         // "onecentlin.laravel-blade"
     ],
     "remoteUser": "sail",
-    "initializeCommand": "cp .env.example .env && sed -i \"APP_URL=|APP_URL=https://${CODESPACE_NAME}-80.${GITHUB_CODESPACES_PORT_FORWARDING_DOMAIN}|g\"",
-    "postCreateCommand": {
-        "setup": "composer install && php artisan key:generate && php artisan migrate"
-    }
+    "initializeCommand": "cp .env.example .env",
+    "postCreateCommand": "composer install && php artisan key:generate && php artisan migrate"    
     // "forwardPorts": [],
     // "runServices": [],
     // "shutdownAction": "none",
