--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -15,7 +15,7 @@
         // "onecentlin.laravel-blade"
     ],
     "remoteUser": "sail",
-    "initializeCommand": "cp .env.example .env && sed -i \"APP_URL=|APP_URL=https://${CODESPACE_NAME}-80.${GITHUB_CODESPACES_PORT_FORWARDING_DOMAIN}|g\"",
+    "initializeCommand": "cp .env.example .env && sed -i \"APP_URL=|APP_URL=https://${CODESPACE_NAME}-80.${GITHUB_CODESPACES_PORT_FORWARDING_DOMAIN}|g\" .env",
     "postCreateCommand": "composer install && php artisan key:generate && php artisan migrate"    
     // "forwardPorts": [],
     // "runServices": [],
